# abstimmungsstudio

./: .gitignore  README.md  main.py  pyproject.toml  test_pipeline.py  test_pipeline2.py  test_predict.py
.devcontainer/: Dockerfile  docker-compose.yml
.github/workflows/: build-deploy.yml
abst/: admin.py  api.py  apps.py  geo.py  models.py  predict.py  schema.py  store.py  tasks.py  tests.py  urls.py  views.py  wahlen_api.py
abst/management/commands/: import_wahlen.py
abst/migrations/: 0001_initial.py  0002_vorlage_related_vorlage_tag.py  0003_geostand_document.py  0004_vorlage_region.py  0005_alter_zaehlkreis_unique_together.py  0006_gemeinde_kanton_id_kanton_kanton_id.py  0007_alter_kanton_short.py  0008_abstimmungstag_projection_bet.py  0009_kanton_lang_code.py  0010_alter_abstimmungstag_name_alter_vorlage_name.py  0011_alter_vorlage_options_vorlage_has_zk.py  0012_kanton_stimmen.py  0013_partei.py
abst/static/abst/css/: style.css
abst/static/abst/js/: abstimmungstag.js  compare.js  index.js  map.js  scatterplot.js  sidebar.js  table.js  wahlen_map.js
abst/templates/abst/: abstimmungstag.html  base.html  index.html  test.html  vorlage_compare.html  vorlage_map.html  vorlage_scatterplot.html  vorlage_table.html  wahlen_map.html
abst/templates/abst/includes/: main_nav.html  nav_header.html  vorlage_nav.html
charts/: apps.py  models.py
conf/: admin.py  apps.py
core/: api.py  settings.py  urls.py
docker/: Dockerfile
